Fix likers-dropdown-menu z-index styling

--- a/app/assets/stylesheets/components/_dropup_menu.scss
+++ b/app/assets/stylesheets/components/_dropup_menu.scss
@@ -12,6 +12,7 @@
   gap: 5px;
   box-shadow: var(--box-shadow);
   width: 150px;
+  z-index: 10;
 
   span {
     color: var(--secondary-background-color);
